@@ -31,17 +31,36 @@ function strip_lines_from_bazel_cc() {
   # file). In newer versions of gnu sed there is a -i option to edit in place.
 
   # different sandbox_root result in different startup options
+  # TODO(b/5568649): Remove host_javabase from tests and stop removing the
+  # warning from the stderr output.
   clean_log=$(\
-    sed\
-    -e '/^Sending SIGTERM to previous B(l)?aze(l)? server/d'\
-    -e "/^INFO: Reading 'startup' options from /d"\
-    -e '/^INFO: $TEST_TMPDIR defined: output root default is/d'\
-    -e '/^OpenJDK 64-Bit Server VM warning: ignoring option UseSeparateVSpacesInYoungGen; support was removed in 8.0/d'\
-    -e '/^Extracting B(l)?aze(l)? installation\.\.\.$/d'\
-    -e '/Waiting for response from B(l)?aze(l)? server/d'\
-    -e '/^\.*$/d'\
-    -e '/^Killed non-responsive server process/d'\
-    -e '/server needs to be killed, because the startup options are different/d'\
+    sed \
+    -e "/^INFO: Reading 'startup' options from /d" \
+    -e '/^\$TEST_TMPDIR defined: output root default is/d' \
+    -e '/^OpenJDK 64-Bit Server VM warning: ignoring option UseSeparateVSpacesInYoungGen; support was removed in 8.0/d' \
+    -e '/^Starting local B[azel]* server and connecting to it\.\.\.\.*$/d' \
+    -e '/^\.\.\. still trying to connect to local B[azel]* server after [1-9][0-9]* seconds \.\.\.\.*$/d' \
+    -e '/^Killed non-responsive server process/d' \
+    -e '/server needs to be killed, because the startup options are different/d' \
+    -e '/^WARNING: Waiting for server process to terminate (waited 5 seconds, waiting at most 60)$/d' \
+    -e '/^WARNING: The startup option --host_javabase is deprecated; prefer --server_javabase.$/d' \
+    -e '/^WARNING: The home directory is not defined, no home_rc will be looked for.$/d' \
+    $TEST_log)
+
+  echo "$clean_log" > $TEST_log
+}
+
+function strip_protobuf_unsafe_warning() {
+  # TODO: Protobuf triggers illegal reflective access warning in JDK 9.
+  # Remove this workaround when protobuf fixes this.
+  # See https://github.com/google/protobuf/issues/3781
+  clean_log=$(\
+    sed \
+    -e "/^WARNING: An illegal reflective access operation has occurred/d" \
+    -e "/^WARNING: Illegal reflective access by com\.google\.protobuf\.UnsafeUtil /d" \
+    -e "/^WARNING: Please consider reporting this to the maintainers of com\.google\.protobuf\.UnsafeUtil/d" \
+    -e "/^WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations/d" \
+    -e "/^WARNING: All illegal access operations will be denied in a future release/d" \
     $TEST_log)
 
   echo "$clean_log" > $TEST_log
@@ -53,22 +72,21 @@ function test_batch_mode() {
 
   # strip extra lines printed by bazel.cc
   strip_lines_from_bazel_cc
+  strip_protobuf_unsafe_warning
 
   # compare $TEST_log with command.log
   assert_equals "" "$(diff $TEST_log $log 2>&1)"
 }
 
 function test_batch_mode_with_logging_flag() {
-  LOG_FILE="$(bazel info output_base)/java.log"
-  if [ ! -f $LOG_FILE ]; then
-    mkdir -p log_out || fail "Could not create log_out"
-    GOOGLE_LOG_DIR=$(pwd)/log_out
-    LOG_FILE="log_out/blaze.INFO"
-  fi
   bazel --batch info --logging 6 >&$TEST_log || fail "Expected success"
+  LOG_FILE="$(grep -E "^server_log: .*" "${TEST_log}" \
+      | sed -e "s/server_log: //")" \
+      || fail "grep for server_log path failed"
 
   # strip extra lines printed by bazel.cc
   strip_lines_from_bazel_cc
+  strip_protobuf_unsafe_warning
 
   # compare $TEST_log with command.log
   assert_equals "" "$(diff $TEST_log $log 2>&1)"
